Update and rename sample_config.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # REQUIRED CONFIG
-TELEGRAM_API_HASH = ""                                
-TELEGRAM_API_ID = ""                                  
-BOT_TOKEN = ""                                        
-OWNER_ID = ""                                         
+TELEGRAM_API_HASH = "0c1086e0013e5f6633ad3b4bae13238b"                                
+TELEGRAM_API_ID = "18991521"                                  
+BOT_TOKEN = "5991721762:AAGXPwPyDYH9t1mH8EEsYtnLHBQ3Tqs3vpc"                                        
+OWNER_ID = "1633416742"                                         
 # OPTIONAL CONFIG
 GDRIVE_FOLDER_ID = ""
 IS_TEAM_DRIVE = "False"
