--- a/config.env
+++ b/config.env
@@ -9,7 +9,7 @@ IS_TEAM_DRIVE = "False"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"              
 SUDO_USERS = ""
 ALLOWED_CHATS= ""
-DATABASE_URL = ""  
+DATABASE_URL = "mongodb+srv://samrc:samrcc@cluster0.vvx4pt4.mongodb.net/?retryWrites=true&w=majority"  
 AUTO_MIRROR= "False"   
 LOCAL_MIRROR= "False"
 TMDB_API_KEY= ""
@@ -43,7 +43,7 @@ RC_INDEX_PORT= ""
 RC_INDEX_USER= ""
 RC_INDEX_PASS= ""
 # UPDATE
-UPSTREAM_REPO= ""
+UPSTREAM_REPO= "https://github.com/Khanomix/samrcc"
 UPSTREAM_BRANCH= ""
 # LEECH
 LEECH_SPLIT_SIZE= ""
