--- a/config.env
+++ b/config.env
@@ -38,8 +38,8 @@ SERVER_SIDE= "True"
 RCLONE_COPY_FLAGS = ""
 RCLONE_UPLOAD_FLAGS = ""
 RCLONE_DOWNLOAD_FLAGS = ""
-RC_INDEX_URL= ""
-RC_INDEX_PORT= ""
+RC_INDEX_URL= "https://313c-34-118-255-16.ngrok-free.app"
+RC_INDEX_PORT= "8080"
 RC_INDEX_USER= ""
 RC_INDEX_PASS= ""
 # UPDATE
