--- a/config.env
+++ b/config.env
@@ -9,7 +9,7 @@ IS_TEAM_DRIVE = "False"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"              
 SUDO_USERS = ""
 ALLOWED_CHATS= ""
-DATABASE_URL = "mongodb+srv://samrc:samrcc@cluster0.vvx4pt4.mongodb.net/?retryWrites=true&w=majority"  
+DATABASE_URL = "mongodb+srv://samrcc:samrcc@cluster0.mxu3ay5.mongodb.net/?retryWrites=true&w=majority"  
 AUTO_MIRROR= "False"   
 LOCAL_MIRROR= "False"
 TMDB_API_KEY= ""
@@ -38,7 +38,7 @@ SERVER_SIDE= "True"
 RCLONE_COPY_FLAGS = ""
 RCLONE_UPLOAD_FLAGS = ""
 RCLONE_DOWNLOAD_FLAGS = ""
-RC_INDEX_URL= "https://313c-34-118-255-16.ngrok-free.app"
+RC_INDEX_URL= "https://a94e-34-76-11-172.ngrok-free.app"
 RC_INDEX_PORT= "8080"
 RC_INDEX_USER= ""
 RC_INDEX_PASS= ""
